# VisuDSA

./: .env  .gitignore  INSTALL.txt  README.md  app.py  code_executor.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  routes.py  setup.py  start_visudsa.bat  start_visudsa.sh
data/: quiz_data.py  theory_content.py
instance/: data_structures_platform.db
static/css/: custom.css
static/js/: code_editor.js  main.js  quiz.js  visualizer.js
templates/: about.html  admin_dashboard.html  admin_users.html  base.html  code_editor.html  faq.html  index.html  login.html  quiz.html  register.html  theory.html  user_profile.html  visualizer.html
